fix(resume): improve color contrast of resume
- fix contrast by removing alpha property of background
- fix contrast also on figma designs

--- a/UI/styles/about.css
+++ b/UI/styles/about.css
@@ -25,7 +25,6 @@ h2 {
   height: 100%;
 }
 .main-wrapper {
-  background-color: rgba(255, 255, 255, 0.75);
   padding: 50px 0;
   box-sizing: border-box;
 }
